Add bcryptjs dependency to API package

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@tmp/db": "1.0.0",
     "@tmp/shared": "1.0.0",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "zod": "^3.23.8"
   },
