Fix Prisma client generation and improve error handling for Vercel deployment

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "dev": "vercel dev",
-    "build": "tsc -p tsconfig.json"
+    "build": "cd ../../packages/db && npx prisma generate && cd ../../apps/api && tsc -p tsconfig.json",
+    "postinstall": "cd ../../packages/db && npx prisma generate"
   },
   "dependencies": {
     "@tmp/db": "1.0.0",
