Fix workspace package resolution for Vercel by copying packages during build

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "dev": "vercel dev",
-    "build": "cd ../../packages/db && npx prisma generate && cd ../../apps/api && tsc -p tsconfig.json",
+    "prebuild": "node scripts/copy-packages.js",
+    "build": "tsc -p tsconfig.json",
     "postinstall": "cd ../../packages/db && npx prisma generate"
   },
   "dependencies": {
