--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,9 +3,16 @@
   "compilerOptions": {
     "outDir": "dist",
     "module": "CommonJS",
-    "target": "ES2020"
+    "target": "ES2020",
+    "baseUrl": ".",
+    "paths": {
+      "@tmp/shared": ["./_packages/@tmp/shared/src/index.ts"],
+      "@tmp/shared/*": ["./_packages/@tmp/shared/src/*"],
+      "@tmp/db": ["./_packages/@tmp/db/src/index.ts"],
+      "@tmp/db/*": ["./_packages/@tmp/db/src/*"]
+    }
   },
-  "include": ["api/**/*.ts", "lib/**/*.ts"]
+  "include": ["api/**/*.ts", "lib/**/*.ts", "_packages/**/*.ts"]
 }
 
 
