Simplify: ensure packages are in node_modules and not excluded

--- a/apps/api/.vercelignore
+++ b/apps/api/.vercelignore
@@ -31,6 +31,6 @@ dist
 build
 .vercel
 
-# Keep _packages for deployment
-!_packages
+# Keep workspace packages in node_modules
+!node_modules/@tmp
 
