--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -2,13 +2,10 @@
   "name": "@tmp/db",
   "version": "1.0.0",
   "private": true,
-  "main": "src/index.ts",
-  "types": "src/index.ts",
-  "exports": {
-    ".": "./src/index.ts",
-    "./*": "./src/*.ts"
-  },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
     "postinstall": "prisma generate"
   },
   "prisma": {
