--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -2,11 +2,10 @@
   "name": "@tmp/shared",
   "version": "1.0.0",
   "private": true,
-  "main": "src/index.ts",
-  "types": "src/index.ts",
-  "exports": {
-    ".": "./src/index.ts",
-    "./*": "./src/*.ts"
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsc"
   },
   "dependencies": {
     "zod": "^3.23.8"
