--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
+    "module": "CommonJS",
+    "target": "ES2020",
     "declaration": true,
     "declarationMap": true
   },
