Update mobile app to use production API URL by default for Expo Go testing

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -28,7 +28,8 @@
     "extra": {
       "eas": {
         "projectId": "tijaniyah-muslim-pro-placeholder"
-      }
+      },
+      "apiBaseUrl": "https://tijaniyahmuslimpro-admin-mu.vercel.app"
     }
   }
 }
