Add root endpoint with API information

--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -4,6 +4,12 @@
       "runtime": "@vercel/node@3.2.0"
     }
   },
+  "rewrites": [
+    {
+      "source": "/",
+      "destination": "/api/index"
+    }
+  ],
   "installCommand": "npm install && cd ../../packages/shared && npm run build && cd ../db && npx prisma@6.2.1 generate && npm run build && cd ../../apps/api && node scripts/copy-packages.js",
   "buildCommand": "npm run build"
 }
