--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -28,7 +28,17 @@
     "@types/react-dom": "^18.3.2",
     "@types/react-router-dom": "^5.3.3",
     "tailwindcss": "^3.4.15"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
-
-
