Add build script to auto-generate design-tokens.cjs for shared package

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc && node scripts/generate-design-tokens.cjs"
   },
   "dependencies": {
     "zod": "^3.23.8"
