Fix Metro bundler issues: optimize config for Windows and skip version checks
- Updated metro.config.js with Windows-optimized file watcher settings
- Added .watchmanconfig to reduce file watching load
- Created start-expo.js script to bypass network API issues
- Added cross-env dependency for cross-platform environment variables
- Configured Metro to handle monorepo workspace packages properly
- Reduced worker count on Windows to prevent file handle exhaustion
- Added proper ignore patterns to reduce file watcher load

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "npx expo start",
+    "start": "node scripts/start-expo.js",
+    "start:lan": "node scripts/start-expo.js --lan",
+    "start:tunnel": "node scripts/start-expo.js --tunnel",
     "android": "npx expo run:android",
     "ios": "npx expo run:ios",
     "web": "npx expo start --web",
@@ -49,6 +51,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.10",
+    "cross-env": "^7.0.3",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.3.3"
   }
