Improve Expo tunnel mode: add timeout and clear cache option
- Added EXPO_TUNNEL_TIMEOUT environment variable (60 seconds)
- Automatically adds --clear flag when using tunnel mode to help with connection issues
- Added start:tunnel:clear script for manual cache clearing
- Improved tunnel connection reliability

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -7,6 +7,7 @@
     "start": "node scripts/start-expo.js",
     "start:lan": "node scripts/start-expo.js --lan",
     "start:tunnel": "node scripts/start-expo.js --tunnel",
+    "start:tunnel:clear": "node scripts/start-expo.js --tunnel --clear",
     "android": "npx expo run:android",
     "ios": "npx expo run:ios",
     "web": "npx expo start --web",
